# akri-discovery-handler-template

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.discovery-handler  README.md
src/: discovery_handler.rs  main.rs
